--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,22 @@
 body{
     background-color: #cccccc;
+}
+
+h1{
+    text-align: center;
+}
+p{
     text-align: center;
 }
 
+em strong{
+    color: red;
+}
 
+#mision{
+    font-size: 20px; ;
+}
+
+.items{
+    font-style: italic;
+}
