--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
 body{
-    background-color: #cccccc;
+    
 }
 
-img{
+#banner{
     width: 100%;
+}
+
+.principal {
+    background-color: #cccccc;
 }
 
 h1{
@@ -19,6 +23,14 @@ em strong{
 
 #mision{
     font-size: 20px; ;
+}
+
+.diferenciales{
+    background: #FFFFFF;
+}
+
+h2{
+    text-align: center;
 }
 
 .items{
