--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
-body{
-    
+.tituloPrincipal{
+    padding-left: 30px;
 }
+
 
 #banner{
     width: 100%;
@@ -11,7 +12,7 @@ body{
     padding: 20px;
 }
 
-h1{
+.tituloCentralizado{
     text-align: center;
 }
 p{
@@ -29,10 +30,6 @@ em strong{
 .diferenciales{
     background: #FFFFFF;
     padding: 30px;
-}
-
-h2{
-    text-align: center;
 }
 
 .items{
