--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,91 @@
-.tituloPrincipal{
-    padding-left: 30px;
+header{
+    background-color: #BBBBBB;
+    padding: 20px 0;
+}
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
 }
 
-
-#banner{
-    width: 100%;
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
-.principal {
-    background-color: #cccccc;
-    padding: 20px;
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-.tituloCentralizado{
-    text-align: center;
-}
-p{
-    text-align: center;
-}
-
-em strong{
-    color: red;
+nav a{
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-#mision{
-    font-size: 20px; ;
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
 }
 
-.diferenciales{
-    background: #FFFFFF;
-    padding: 30px;
+.productos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
 }
 
-.items{
-    font-style: italic;
-}
-
-ul{
+.productos li{
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}    
+
+.productos li:hover{
+    border-color: #c78c19;
 }
 
-.imagenDiferenciales{
-    width: 50%;
+.productos li:active{
+    border-color: #088c19;
+}
+   
+
+.productos h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
+.productoDescripcion{
+    font-size: 18px;
+}
+
+.productoPrecio{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    background: url(../img/bg.jpg);
+    padding: 40px;
+}
+
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px;
 }
