--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 header{
     background-color: #BBBBBB;
     padding: 20px 0;
@@ -148,3 +152,39 @@ td, th{
     border: 1px solid black;
     padding: 8px 15px;
 }
+
+/*CSS para nuestra home*/
+
+.banner{
+    width: 100%;
+}
+
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.principal p{
+    margin: 0 0 1em;
+}
+
+.principal strong{
+    font-style: italic;
+}
+
+.principal em{
+    font-weight: bold;
+}
+
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.imagen-diferenciales{
+    width: 60%;
+}
+
